<resources>
    <string name="app_name">ProgettoComputazione</string>
    <string name="welcome_msg">Benvenuto!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="nickname_hint">Nickname</string>
    <string name="btn_login">Accedi</string>
    <string name="btn_register">Registrati</string>
    <string name="btn_goto_register">Non hai un account? Registrati</string>
    <string name="btn_goto_login">Hai già un account? Accedi</string>
    <string name="btn_email_link">Invia link di accesso email</string>
    <string name="err_empty_fields">Riempi tutti i campi</string>
    <string name="err_email_empty">Inserisci l\'email per ricevere il link</string>
    <string name="msg_link_sent">Link inviato! Controlla la tua email.</string>
    <string name="msg_registration_success">Registrazione completata!</string>
    <string name="msg_login_success">Login effettuato!</string>
    <string name="msg_link_login_success">Login con link riuscito!</string>
    <string name="title_register">Crea Account</string>
    <string name="title_groups">I Tuoi Gruppi</string>
    <string name="btn_create_group">Crea Gruppo</string>
    <string name="group_name_hint">Nome Gruppo</string>
    <string name="create_group_dialog_title">Nuovo Gruppo</string>
    <string name="cancel">Annulla</string>
    <string name="create">Crea</string>
    <string name="no_groups">Nessun gruppo trovato. Creane uno!</string>
    <string name="title_chat">Chat</string>
    <string name="title_group_details">Dettagli Gruppo</string>
    <string name="send_hint">Scrivi un messaggio...</string>
    <string name="btn_send">Invia</string>
    <string name="members_label">Partecipanti:</string>
    <string name="add_member_hint">Email partecipante</string>
    <string name="btn_add_member">Aggiungi</string>
    <string name="err_empty_email">Inserisci un\'email valida</string>
    <string name="owner_badge">Proprietario</string>
    <string name="msg_member_added">Membro aggiunto correttamente!</string>
    <string name="msg_member_removed">Membro rimosso dal gruppo</string>
    <string name="msg_member_blocked">Membro bloccato</string>
    <string name="msg_member_unblocked">Membro sbloccato</string>
    <string name="msg_group_deleted">Gruppo eliminato definitivamente</string>
    <string name="err_group_not_empty">Il gruppo deve essere vuoto (solo tu) per essere eliminato</string>
    <string name="err_group_name_exists">Nome gruppo già utilizzato. Scegline un altro.</string>
    <string name="err_member_already_present">L\'utente è già presente nel gruppo</string>
    <string name="action_leave_group">Abbandona Gruppo</string>
    <string name="msg_leave_success">Hai abbandonato il gruppo</string>
    <string name="action_delete_group">Elimina Gruppo</string>
    <string name="err_user_not_found">Utente non trovato</string>
    <string name="welcome_user">Benvenuto, %s</string>
    <string name="action_logout">Logout</string>
    <string name="desc_open_chat">Apri chat</string>
    <string name="msg_uploading_image">Invio immagine in corso...</string>
    <string name="msg_image_sent">Immagine inviata!</string>
    <string name="dialog_send_image_title">Invia immagine</string>
    <string name="btn_send_action">Invia</string>
    <string name="btn_cancel">Annulla</string>
    <string name="msg_group_created">Gruppo creato con successo!</string>
    <string name="msg_session_expired">Sessione scaduta o utente non trovato</string>
    <string name="proprietario_label">Proprietario: %s</string>
    <string name="err_invalid_credentials">Credenziali non corrette</string>
    <string name="err_email_already_in_use">L\'email è già utilizzata da un altro account</string>
    <string name="err_weak_password">La password deve contenere almeno 6 caratteri</string>
    <string name="err_registration_failed">Registrazione non riuscita</string>
    <string name="err_unknown">Errore sconosciuto</string>
    <string name="msg_member_blocked_status">Membro bloccato</string>
    <string name="msg_member_unblocked_status">Membro sbloccato</string>
    <string name="msg_group_not_found">Il gruppo non esiste più</string>
    <string name="msg_removed_from_group">Sei stato rimosso dal gruppo</string>
    <string name="err_send_failed">Impossibile inviare il messaggio</string>
</resources>